# EasyAudio

./: .gitignore  EasyAudio-notes.org  EasyAudio.cabal  README.md
demo/: Bling.hs  Vader.hs
src/: EasyAudio.hs
