name:                EasyAudio
version:             0.1.0.0
synopsis:            Simple audio playback.
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Anthony Cowley
maintainer:          acowley@gmail.com
copyright:           Copyright (C) 2015 Anthony Cowley
category:            Sound
build-type:          Simple
-- extra-source-files:  
data-files:          demo/bling.wav
cabal-version:       >=1.10

library
  exposed-modules:     EasyAudio
  build-depends:       base >=4.7 && <4.9,
                       sdl2 >= 1.3 && < 1.4
  hs-source-dirs:      src
  default-language:    Haskell2010

executable demo
  build-depends: base, sdl2, EasyAudio, filepath
  hs-source-dirs: demo
  default-language: Haskell2010
  main-is: Bling.hs
  